Add Lebanese flag & table of largest cities

--- a/index.html
+++ b/index.html
@@ -6,5 +6,29 @@
 <body>
   <h1>Learn about the country of Lebanon!</h1>
   <p>Lebanon is a country located in the Middle East. It's bordered by both Israel and Syria, with the Mediterranean Sea bordering the western coast. The official language of Lebanon is Arabic.</p>
+  <img src="images/Flag_of_Lebanon.png" alt="Flag of Lebanon" width="500">
+  <h2>Largest Cities in Lebanon</h2>
+  <table>
+    <tr>
+      <th>City</th>
+      <th>Population</th>
+    </tr>
+    <tr>
+      <td>Beirut</td>
+      <td>~1,900,000</td>
+    </tr>
+    <tr>
+      <td>Tripoli</td>
+      <td>~850,000</td>
+    </tr>
+    <tr>
+      <td>Sidon</td>
+      <td>~200,000</td>
+    </tr>
+    <tr>
+      <td>Jounieh</td>
+      <td>~110,000</td>
+    </tr>
+  </table>
 </body>
 </html>
