--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <h1>Learn about the country of Lebanon!</h1>
   <p>Lebanon is a country located in the Middle East. It's bordered by both Israel and Syria, with the Mediterranean Sea bordering the western coast. The official language of Lebanon is Arabic.</p>
   <img src="images/Flag_of_Lebanon.png" alt="Flag of Lebanon" width="500">
+  
   <h2>Largest Cities in Lebanon</h2>
-  <table>
+  <table border="1">
     <tr>
       <th>City</th>
       <th>Population</th>
@@ -30,5 +31,15 @@
       <td>~110,000</td>
     </tr>
   </table>
+
+  <h3>Popular Lebanese Dishes</h3>
+  <ul>
+    <li>Baba ghanouj</li>
+    <li>Fattoush</li>
+    <li>Falafel</li>
+    <li>Kibbeh</li>
+    <li>Kafta</li>
+  </ul>
+  
 </body>
 </html>
