Create basic nav & footer section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <title>Lebanon</title>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li>Learn More</li>
+    </ul>
+  </nav>
   <h1>Learn about the country of Lebanon!</h1>
   <p>Lebanon is a country located in the Middle East. It's bordered by both Israel and Syria, with the Mediterranean Sea bordering the western coast. The official language of Lebanon is Arabic.</p>
   <img src="images/Flag_of_Lebanon.png" alt="Flag of Lebanon" width="500">
@@ -40,6 +46,7 @@
     <li>Kibbeh</li>
     <li>Kafta</li>
   </ul>
-  
+
+  <footer><p>Copyright (c) 2017 Michael Milford</p></footer>
 </body>
 </html>
