--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li>Learn More</li>
+      <li><a href="https://www.cia.gov/library/publications/the-world-factbook/geos/le.html">Learn More</a></li>
     </ul>
   </nav>
   <h1>Learn about the country of Lebanon!</h1>
