Change nav item & create questions.html file

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
   <title>Lebanon</title>
 </head>
 <body>
+  
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="https://www.cia.gov/library/publications/the-world-factbook/geos/le.html">Learn More</a></li>
+      <li><a href="question.html">Ask a Question</a></li>
     </ul>
   </nav>
-  <h1>Learn about the country of Lebanon!</h1>
+
+  <h1>Lebanon</h1>
   <p>Lebanon is a country located in the Middle East. It's bordered by both Israel and Syria, with the Mediterranean Sea bordering the western coast. The official language of Lebanon is Arabic.</p>
   <img src="images/Flag_of_Lebanon.png" alt="Flag of Lebanon" width="500">
   
