--- a/question.html
+++ b/question.html
@@ -14,7 +14,7 @@
 
   <h1>Ask a Question</h1>
 
-  <form action="confirm.html" method="post">
+  <form action="confirm.html" method="">
     <div>
       <label for="name"><strong>Full Name:</strong></label>
       <input type="text" name="name" id="name" autocomplete="name">
