--- a/confirm.html
+++ b/confirm.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Lebanon | Question Submitted</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <p>Congratulations! Your questions was submitted successfully.</p>
