--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html" class="current-page">Home</a></li>
       <li><a href="question.html">Ask a Question</a></li>
     </ul>
   </nav>
