--- a/question.html
+++ b/question.html
@@ -9,7 +9,7 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="question.html">Ask a Question</a></li>
+      <li><a href="question.html" class="current-page">Ask a Question</a></li>
     </ul>
   </nav>
 
