--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </nav>
 
   <main>
-  
+
     <h1>Lebanon</h1>
     <p>Lebanon is a country located in the Middle East. It's bordered by both Israel and Syria, with the Mediterranean Sea bordering the western coast. The official language of Lebanon is Arabic.</p>
     <img src="images/Flag_of_Lebanon.png" alt="Flag of Lebanon" width="500">
@@ -43,7 +43,7 @@
       </tr>
     </table>
 
-    <h3 style="font-size: 1.5em">Popular Lebanese Dishes</h3>
+    <h3>Popular Lebanese Dishes</h3>
     <ul>
       <li>Baba ghanouj</li>
       <li>Fattoush</li>
@@ -52,12 +52,12 @@
       <li>Kafta</li>
     </ul>
 
-    <h4 style="font-size: 1.5em">Learn more about Lebanon from the <a href="https://www.cia.gov/library/publications/the-world-factbook/geos/le.html">CIA World Factbook</a></h4>
+    <h4>Learn more about Lebanon from the <a href="https://www.cia.gov/library/publications/the-world-factbook/geos/le.html">CIA World Factbook</a></h4>
     <p><strong>From a casual visitor's point of view</strong>, one good aspect of this website is that it provides a quick overview of Lebanon organized into major topics. Also, the information is trustworthy since it's backed by the CIA and shows it was updated recently on January 12th, 2017.</p>
     <p><strong>From a web developer's point of view</strong>, the site covers two important benchmarks. It loads in just over 1 second and is easy to navigate. The site makes use of html elements (div, header, section, article) to organize the content. Finally, the site is also responsive to desktop & mobile screens.</p>
 
   </main>
 
-  <footer style="padding: 16px 0; text-align: center; background-color: #2B2B2B; color: #FFFFFF;"><p>Copyright (c) 2017 Michael Milford</p></footer>
+  <footer><p>Copyright (c) 2017 Michael Milford</p></footer>
 </body>
 </html>
