Make all <img> tags responsive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <h1>Lebanon</h1>
     <p>Lebanon is a country located in the Middle East. It's bordered by both Israel and Syria, with the Mediterranean Sea bordering the western coast. The official language of Lebanon is Arabic.</p>
-    <img src="images/Flag_of_Lebanon.png" alt="Flag of Lebanon" width="500">
+    <img src="images/Flag_of_Lebanon.png" alt="Flag of Lebanon">
     
     <h2>Largest Cities in Lebanon</h2>
     <table border="1">
